<resources>
    <string name="app_name">SwaaS LMS</string>
    <string name="version">v1.0.6(8)</string>
    <string name="versionCode">8</string>
    <string name="versionName">1.0.6</string>
    <string name="versionname">Version : 1.0.6</string>
    <string name="poweredbyswaas">\u00a9 Powered By Swaas</string>
    <string-array name="Language">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="assettitle">TOOLS / VIDEO LIBRARY</string>
    <string name="coursetitle">COURSES</string>
    <string name="assesmenttitle">ASSIGNMENT</string>
    <string name="mytrainighistory">MY TRAINING HISTORY</string>
    <string name="learning" translatable="false"></string>
    <string name="allassets">All Assets</string>
    <string name="back">Back</string>
    <string-array name="category">
        <item>General</item>
    </string-array>
    <string name="Tags">Tags</string>
    <string name="loading">Loading...</string>
    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="showmore">Show More</string>
    <string name="Document">Document</string>
    <string name="Image">Image</string>
    <string name="Audio">Audio</string>
    <string name="Video">Video</string>
    <string name="Today">Today</string>
    <string name="thisweek">This Week</string>
    <string name="twoweeks">2 Weeks</string>
    <string name="allweeks">All</string>
    <string name="Type">Type</string>
    <string name="Submit">Submit</string>
    <string name="sortassets">Sort Assets</string>
    <string name="filterass">Filter Assets</string>
    <string name="Readunread">Read/Unread</string>
    <string name="Read">Read</string>
    <string name="Unread">Unread</string>
    <string name="online">Online</string>
    <string name="Downloaded">Downloaded</string>
    <string name="downloadedonline">Online/Downloaded</string>
    <string name="Sort">Sort</string>
    <string name="Alphabetasc">Alphabet - Asc</string>
    <string name="Alphabetdesc">Alphabet - Desc</string>
    <string name="Alphabet">Alphabet</string>
    <string name="comments">Comment</string>
    <string name="post">Post</string>
    <string name="logout">Logout</string>
    <string name="changepassword">Change Password</string>
    <string name="myprofile">My Profile</string>
    <string name="gooffline">Go Offline</string>
    <string name="goOnline">Go Online</string>
    <string name="descriptiontext">Description</string>
    <string name="categorytext">Category</string>
    <string name="error_message">Please check your network connection and try again</string>
    <string name="error_offline">You are currently in Offline mode.Connect to internet to go online.</string>
    <string name="downloadmessage">Please connect to internet to download</string>
    <string name="playMessage">Please connect to internet to view</string>
    <string name="downloadcomplete">Download Complete</string>
    <string name="erroroccured">Error occured please try again</string>
    <string name="locationpermissoinMessage">Please allow to access your location.</string>
    <string name="storagepermissoinMessage">Please allow access your files.</string>
    <string name="readmore">Read More</string>
    <string name="readless">Read Less</string>
    <string name="showmorediscussions">Read All Discussions</string>
    <string name="postsuccess">Posted Successfully</string>
    <string name="progressdownload">Downloading Please wait...</string>
    <string name="LikeRatetitle">Like / Rate</string>
    <string name="Replytext">Reply</string>
    <string name="charactersremainig">characters remainig</string>
    <string name="hateIt">Hated It</string>
    <string name="dislikeIt">Disliked It</string>
    <string name="itsok">it\'s ok</string>
    <string name="likeIt">Liked It</string>
    <string name="loveIt">Loved It</string>
    <string name="uploadingData">Uploading Data.Please wait...</string>
    <string name="Discussiontitle">Discussions</string>
    <string name="subDiscussionstitle">Discussions</string>
    <string name="likeaction">Like</string>
    <string name="shortReview">Write a short review</string>
    <string name="loginusername">User Name or Email ID</string>
    <string name="logincompanyname">CompanyName(Company.kangle.me)</string>
    <string name="loginpassword">Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="loginbutton">Login</string>
    <string name="postingcoments">Posting comments</string>
    <string name="likeratingsuccess">Thanks for Like/Rating</string>
    <string name="remainigchartext">100 characters remainig</string>
    <string name="welcome">Welcome</string>
    <string name="logoutmessage">You have logged out successfully</string>
    <string name="Reviews">Reviews</string>
    <string name="Related">Related</string>
    <string name="noassetsfound">No assets found.</string>
    <string name="logoufailed">Please connect to internet to Logout from the application.</string>
    <string name="Help">Help</string>
    <string name="helpMessage">For help and support please contact us at support@swaas.net</string>
    <string name="sendemail">Send email</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="validText">Please enter valid text.</string>
    <string name="loadingpleasewait">Loading please wait...</string>
    <string name="confirmLogOut">This action will logout from the application. \n Are you sure you want to logout.</string>
    <string name="ok">OK</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="emptyDashboard">Oops!\n Courses have not been assigned to you yet.\n Please contact your training manager or administrator for more information</string>
    <string name="latest_course">Latest Course</string>
    <string name="complet_course">Completed Course</string>
    <string name="total_course">Total Courses</string>
    <string name="completed_course">Completed</string>
    <string name="acquired_course">Acquired</string>
    <string name="assigned_course">Assigned</string>
    <string name="yet_to_start">Yet to start</string>
    <string name="in_progress">In progress</string>
    <string name="Overdue_course">Overdue</string>
    <string name="search_courses">Search Courses</string>
    <string name="support">Support</string>
    <string name="close">Close</string>
    <string name="status">Status</string>
    <string name="app_version">Update</string>
    <string name="newversion">There is a new version available in the playstore. Kindly click on OK to update.Thank you.</string>
    <string name="singlepage">Single Page</string>
    <string name="continuespage">Countinues Page</string>
    <string name="brightnessalert">Hi Kangle wants to adjust system brightness. Would you like to allow</string>
    <string name="firstpagealert">You are at the first asset</string>
    <string name="lastpagealert">You are at the last asset.</string>
    <string name="please_wait_progress">Loading please wait.....</string>
    <string name="willingtonextasset">Would you like to go the next asset.</string>
    <string name="error_network_alert">Internet is not available.To continue choose an option</string>
    <string name="coursestatus">Course Status</string>
    <string name="take_test">Test</string>
    <string name="max_attempts_reached_shortened">Max attempts reached</string>
    <string name="expired_shortened">Expired</string>
    <string name="no_of_contents">No Of Contents :</string>
    <string name="complete_percent">% Complete</string>
    <string name="apply">Apply</string>
    <string name="clearfilter">Clear</string>
    <string name="question_interception_text">Are you sure you want to quit the test</string>
    <string name="cleared">Cleared</string>
    <string name="not_cleared">Not Cleared</string>
    <string name="course_name">Course Name :</string>
    <string name="section_name">Section Name :</string>
    <string name="attempt_date_title">Attempt Date</string>
    <string name="result_title">Result</string>
    <string name="no_result">No Results found</string>
    <string name="total_negativeMarks">Total Negative Marks</string>
    <string name="correct_answer_questions">Total correctly answered questions</string>
    <string name="no_of_questions_attended">No of Questions attended</string>
    <string name="no_of_questions">No of Questions</string>
    <string name="Score">Score</string>
    <string name="partialy_shortened">Partially completed</string>
    <string name="Report">Report</string>
    <string name="content">Content</string>
    <string name="watch_for">Watch for </string>
    <string name="view">View</string>
    <string name="no_of_contents_hint">Designed to help you practice and apply the skills you learn</string>
    <string name="last_date_text">Last date to complete this section</string>
    <string name="prerequsitebefore">Please complete </string>
    <string name="prerequsiteafter">before selecting this course</string>
    <string name="view_report">View Report</string>
    <string name="validation_msg_question">Please choose answer to proceed.</string>
    <string name="time_Out">You have run out of Time!</string>
    <string name="Congrats">Congrats</string>
    <string name="warning">Warning</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="attended_on">Attempt date :</string>
    <string name="due_on">Due on -</string>
    <string name="clickonchart"> Click * to view report.</string>
    <string name="sectionmandatealert"> Please complete previous section to enable this section.</string>
    <string name="testsavedoffline">test Error occurred. Try again later.</string>
    <string name="noQuestions">Currently there are no questions available</string>
    <string name="finished">Thank you for your response(s).</string>
    <string name="Attempt">Attempt</string>
    <string name="Contents_to_read">Contents to read</string>
    <string name="Attempts">Attempts : </string>
    <string name="Attempts_taken">Attempts taken : </string>
    <string name="start">START : </string>
    <string name="finish">FINISH :</string>
    <string name="file_size">FILE SIZE :</string>
    <string name="upload_date">Upload date :</string>
    <string name="progress">PROGRESS</string>
    <string name="Begin">BEGIN</string>
    <string name="resume_course">RESUME</string>
    <string name="no_tags_available">No Tags Available</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_companyname">Please enter companyname</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="open">Open</string>
    <string name="checklisttitle">CHECKLIST</string>
    <string name="mine">Mine</string>
    <string name="my_Store">My Store</string>
    <string name="Onetime">One Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="no_checklist">Currently there is no Checklist available for you</string>
    <string name="section_title">Section :</string>
    <string name="of">Of</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="confirmsubmitchecklist">Are you sure to submit the checklist?</string>
    <string name="ConfirmSubmit">Confirm</string>
    <string name="yestext">Yes</string>
    <string name="are_you_sure_download">Are you sure you want to download</string>
    <string name="filename">File Name:</string>
    <string name="your_application_will_force_close_reopen_to_use_application">Your Application will force close.Reopen to use Application.</string>
</resources>