<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swaas.kangle.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/companylogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/changepassword"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/kangleimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/kangle"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tagtext"
            android:text="Upload | Share | Engage"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_below="@+id/kangleimage"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/tagtext">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:layout_margin="5dp"
                android:hint="@string/oldpass"
                android:ems="8"
                android:textSize="15dp"
                android:id="@+id/oldpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:layout_margin="5dp"
                android:hint="@string/newpass"
                android:ems="5"
                android:textSize="15dp"
                android:id="@+id/newpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:layout_margin="5dp"
                android:hint="@string/confirmpass"
                android:ems="8"
                android:textSize="15dp"
                android:id="@+id/confirmpassword" />

            <Button
                android:text="@string/Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:id="@+id/newpasswordsubmit" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
