<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/downloadlayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:background="@color/tacobellbackground">

                <ImageView
                    android:id="@+id/helplogo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:visibility="gone"
                    android:src="@drawable/ic_power_settings_new_white_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:layout_toRightOf="@+id/helplogo"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp">

                <TextView
                    android:id="@+id/filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filename"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/filesize"
                    android:layout_below="@+id/filename"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="File size :"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_download"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_marginBottom="5dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/cancelldw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"
                    android:layout_toLeftOf="@+id/downloadOk"
                    android:background="@drawable/rounded_taco_button"
                    android:text="@string/cancel"/>

                <TextView
                    android:id="@+id/downloadOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/ok"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_taco_button"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>